arreglo en games, generacion de otros endpoints